--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "version": "1.2.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index",
+    "dev": "NODE_ENV=development nodemon index",
     "start": "cross-env NODE_ENVIRONMENT=production node index"
   },
   "dependencies": {
@@ -31,7 +31,8 @@
     "koa-helmet": "^4.0.0",
     "koa-logger": "^3.2.0",
     "koa-respond": "^1.0.1",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.1.4"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
